# generic-constraints

./: CHANGELOG  README  README.md  generic-constraints.cabal  package.yaml
src/Generics/: Constraints.hs  OneLiner.hs
src/Generics/Constraints/: Internal.hs
src/Generics/OneLiner/: Binary.hs  Internal.hs
src/Generics/OneLiner/Internal/: Unary.hs
test/: unittests.hs
