Name:                 generic-constraints
Version:              1.0.0
Synopsis:             Constraints via Generic
Description:          Write short and concise contexts based on generics
Homepage:             https://github.com/yairchu/generic-constraints
Bug-reports:          https://github.com/yairchu/generic-constraints/issues
License:              BSD3
License-file:         LICENSE
Author:               Sjoerd Visscher, Xia Li-yao, Yair Chuchem
Maintainer:           yairchu@gmail.com
Category:             Generics
Build-type:           Simple
Cabal-version:        >= 1.8

Extra-Source-Files:
  examples/*.hs
  CHANGELOG

Library
  HS-Source-Dirs:  src

  Exposed-modules:
    Generics.OneLiner
    Generics.OneLiner.Binary
    Generics.OneLiner.Classes
    Generics.OneLiner.Internal
    Generics.OneLiner.Internal.Unary

  Build-depends:
      base          >= 4.9 && < 5
    , transformers  >= 0.5 && < 0.6
    , contravariant >= 1.4 && < 1.6
    , ghc-prim      >= 0.5 && < 1.0
    , bifunctors    >= 5.4 && < 6.0
    , profunctors   >= 5.2 && < 6.0
    , tagged        >= 0.8 && < 0.9

  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

source-repository head
  type:     git
  location: git://github.com/yairchu/generic-constraints.git

Test-suite unittests
  Hs-source-dirs:  test
  Main-is:         unittests.hs

  Build-depends:
      base
    , contravariant
    , HUnit
    , one-liner

  Type: exitcode-stdio-1.0
